--- a/Application/Buseness/View/default/Building/step1.html
+++ b/Application/Buseness/View/default/Building/step1.html
@@ -59,7 +59,7 @@
 			<div class="dropdown clearfix">
 				<span class="caret"></span>
 				<button id="tradingLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">商圈</button>
-				<input type="text" name="trading" value="{$info.trading_area}" />
+				<input type="hidden" name="trading_area" value="{$info.trading_area}" />
 				<ul class="dropdown-menu" aria-labelledby="tradingLabel">
 
 				</ul>
