--- a/Application/Home/View/default/Offices/index.html
+++ b/Application/Home/View/default/Offices/index.html
@@ -5,7 +5,6 @@
     <script type="text/javascript" src="__JS__/article.js"></script>
 </block>
 <block name="body">
-
     <div class="wrap">
         <div class="wrapTop main">
             <h2><php>echo count($list);</php> offices in 上海上海区域办公空间</h2>
@@ -89,16 +88,15 @@
                 </div>
             </div>
             <div class="inWrapR">
-                <div class="city pad">
+                <div class="city pad" id="search_city">
                     <h5>城市</h5>
                     <div class="dropdown">
-                        <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">上海</button><span class="caret"></span>
-                        <ul class="dropdown-menu" aria-labelledby="dLabel">
-                            <li>北京</li>
-                            <li>上海</li>
-                            <li>杭州</li>
-                            <li>广州</li>
-                            <li>深圳</li>
+                        <button id="cityLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">上海</button><span class="caret"></span>
+                        <input type="hidden" name="city" value="">
+                        <ul class="dropdown-menu" aria-labelledby="cityLabel">
+                            <volist name='city' id='vo'>
+                                <li>{$vo.region_name}</li>
+                            </volist>
                         </ul>
                     </div>
                 </div>
@@ -106,134 +104,111 @@
                     <h5>地理位置</h5>
                     <input type="text" placeholder="徐汇区宜山路425号光启城商务楼">
                 </div>
+
                 <div class="rapid pad">
-                    <h5>快速搜索</h5>
-                    <div class="drop clearfix">
-                        <em>类 型</em>
-                        <div class="dropdown clearfix">
-                            <span class="caret"></span>
-                            <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">不限</button>
-                            <ul class="dropdown-menu" aria-labelledby="dLabel">
-                                <li>0</li>
-                                <li>0</li>
-                                <li>0</li>
-                                <li>0</li>
-                                <li>0</li>
-                                <li>0</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="drop clearfix">
-                        <em>时 间</em>
-                        <div class="dropdown clearfix">
-                            <span class="caret"></span>
-                            <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">不限</button>
-                            <ul class="dropdown-menu" aria-labelledby="dLabel">
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="drop clearfix">
-                        <em>人 数</em>
-                        <div class="dropdown clearfix">
-                            <span class="caret"></span>
-                            <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">不限</button>
-                            <ul class="dropdown-menu" aria-labelledby="dLabel">
-                                <li>2</li>
-                                <li>2</li>
-                                <li>2</li>
-                                <li>2</li>
-                                <li>2</li>
-                                <li>2</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="drop clearfix area">
-                        <em>区 域</em>
-                        <div class="dropdown clearfix">
-                            <span class="caret"></span>
-                            <button id="area" type="button" aria-haspopup="true" aria-expanded="false">不限</button>
-                            <ul class="dropdown-menu" id="area-ul">
-                                <li>浦  东</li>
-                                <li>徐  汇</li>
-                                <li>静  安</li>
-                                <li>长  宁</li>
-                                <li>普  陀</li>
-                                <li>黄  浦</li>
-                                <li>虹  口</li>
-                                <li>闵  行</li>
-                                <li>闸  北</li>
-                                <li>杨  浦</li>
-                                <li>青  浦</li>
-                                <li>松  江</li>
-                                <li>嘉  定</li>
-                                <li>宝  山</li>
-                                <li>奉  贤</li>
-                            </ul>
-                            <div class="dropdownList">
-                                <dl>
-                                    <dd>申/老闵行</dd>
-                                    <dd>华漕</dd>
-                                    <dd>虹桥镇</dd>
-                                    <dd>龙柏</dd>
-                                    <dd>南方商城</dd>
-                                    <dd>浦江</dd>
-                                    <dd>七宝</dd>
-                                    <dd>莘庄</dd>
-                                </dl>
+                    <form action="__SELF__" method="get" id="searchForm">
+                        <script>
+                            var trading = {$trading};
+                        </script>
+                        <h5>快速搜索</h5>
+                        <div class="drop clearfix" id="search_area">
+                            <em>区 域</em>
+                            <div class="dropdown clearfix">
+                                <span class="caret"></span>
+                                <button id="areaLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{$_region.region_name|default='不限'}</button>
+                                <input type="hidden" name="area" value="{$_region.region_id}">
+                                
+                                <ul class="dropdown-menu" aria-labelledby="areaLabel">
+                                    <volist name='area' id='vo'>
+                                        <li value="{$vo.region_id}">{$vo.region_name}</li>
+                                    </volist>
+                                </ul>
                             </div>
                         </div>
-                    </div>
-                    <div class="drop clearfix">
-                        <em>面 积</em>
-                        <div class="dropdown clearfix">
-                            <span class="caret"></span>
-                            <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">不限</button>
-                            <ul class="dropdown-menu" aria-labelledby="dLabel">
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                            </ul>
+                        <div class="drop clearfix" id="search_trading">
+                            <em>商 圈</em>
+                            <div class="dropdown clearfix">
+                                <span class="caret"></span>
+                                <button id="tradingLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{$_trading['name']|default='不限'}</button>
+                                <input type="hidden" name="trading" value="{$_trading['id']}">
+                                <ul class="dropdown-menu" aria-labelledby="tradingLabel">
+                                        <li>请选择</li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="drop clearfix">
-                        <em>价 位</em>
-                        <div class="dropdown clearfix">
-                            <span class="caret"></span>
-                            <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">不限</button>
-                            <ul class="dropdown-menu" aria-labelledby="dLabel">
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                            </ul>
+                        <div class="drop clearfix" id="search_type">
+                            <em>类 型</em>
+                            <div class="dropdown clearfix">
+                                <span class="caret"></span>
+                                <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{:get_res_type($_type,'不限')}</button>
+                                <input type="hidden" name="type" value="">
+                                <ul class="dropdown-menu" aria-labelledby="dLabel">
+                                    <volist name="resTypes" key="k" id="vo">
+                                        <li value="{$k}">{$vo}</li>
+                                    </volist>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="drop clearfix">
-                        <em>装 修</em>
-                        <div class="dropdown clearfix">
-                            <span class="caret"></span>
-                            <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">不限</button>
-                            <ul class="dropdown-menu" aria-labelledby="dLabel">
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                                <li>1</li>
-                            </ul>
+                        <div class="drop clearfix" id="search_time">
+                            <em>时 间</em>
+                            <div class="dropdown clearfix">
+                                <span class="caret"></span>
+                                <button id="timeLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">不限</button>
+                                <input type="hidden" name="time" value="">
+                                <ul class="dropdown-menu" aria-labelledby="timeLabel">
+                                    <li value="">不限</li>
+                                    <li value="1">今天</li>
+                                    <li value="2">本周</li>
+                                    <li value="3">本月</li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
+                        <div class="drop clearfix" id="search_count">
+                            <em>人 数</em>
+                            <div class="dropdown clearfix">
+                                <span class="caret"></span>
+                                <button id="countLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">不限</button>
+                                <input type="hidden" name="count" value="">
+                                <ul class="dropdown-menu" aria-labelledby="countLabel">
+                                    <li value="">不限</li>
+                                    <li value="1">小于5人</li>
+                                    <li value="2">5至15人</li>
+                                    <li value="3">15人以上</li>
+                                </ul>
+                            </div>
+                        </div>
+                        
+                        <div class="drop clearfix" id="search_mianji">
+                            <em>面 积</em>
+                            <div class="dropdown clearfix">
+                                <span class="caret"></span>
+                                <button id="mianjiLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">不限</button>
+                                <input type="hidden" name="mianji" value="">
+                                <ul class="dropdown-menu" aria-labelledby="mianjiLabel">
+                                    <li value="">不限</li>
+                                    <li value="1">小于20平米</li>
+                                    <li value="2">20-40平米</li>
+                                    <li value="3">40平米以上</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="drop clearfix">
+                            <em>价 位</em>
+                            <div class="dropdown clearfix">
+                                <span class="caret"></span>
+                                <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">不限</button>
+                                <ul class="dropdown-menu" aria-labelledby="dLabel">
+                                    <li>1</li>
+                                    <li>1</li>
+                                    <li>1</li>
+                                    <li>1</li>
+                                    <li>1</li>
+                                    <li>1</li>
+                                </ul>
+                            </div>
+                        </div> 
+                        <button type="submit">临时提交按钮</button>
+                    </form>
                 </div>
                 <div class="facility pad clearfix">
                     <h5>设施支持</h5>
