--- a/Application/Home/View/default/Public/header.html
+++ b/Application/Home/View/default/Public/header.html
@@ -15,9 +15,9 @@
                 <ul class="clearfix main">
                     <li><a href="{:U('Home/Index/index')}">首页</a></li>
                     <li><a href="{:U('Home/Offices/index')}">找办公空间</a></li>
-                    <li><a href="javascript:;">怎么帮助到您</a></li>
+                    <li><a href="{:U('Home/Index/help')}">怎么帮助到您</a></li>
                     <li><a href="javascript:;">关于我们</a></li>
-                    <li><a href="javascript:;">行业动态</a></li>
+                    <li><a href="{:U('Home/Index/clause')}#clause">服务条款</a></li>
                 </ul>
             </nav>
         </div>
