--- a/Application/Home/View/default/Base/common.html
+++ b/Application/Home/View/default/Base/common.html
@@ -3,7 +3,7 @@
 <head>
 	<include file="Public/head"/>
 </head>
-<body>
+<body class="page">
 	<!-- 头部 -->
 	<include file="Public/header"/>
 	<!-- /头部 -->
