--- a/Application/Home/View/default/Public/header.html
+++ b/Application/Home/View/default/Public/header.html
@@ -16,7 +16,7 @@
                     <li><a href="{:U('Home/Index/index')}">首页</a></li>
                     <li><a href="{:U('Home/Offices/index')}">找办公空间</a></li>
                     <li><a href="{:U('Home/Index/help')}">怎么帮助到您</a></li>
-                    <li><a href="javascript:;">关于我们</a></li>
+                    <li><a href="{:U('Home/Index/about')}">关于我们</a></li>
                     <li><a href="{:U('Home/Index/clause')}#clause">服务条款</a></li>
                 </ul>
             </nav>
