--- a/Application/Home/View/default/Public/header.html
+++ b/Application/Home/View/default/Public/header.html
@@ -13,7 +13,7 @@
         	</header>
             <nav>
                 <ul class="clearfix main">
-                    <li><a href="{:U('Home/Index/index')}">首页</a></li>
+                    <li><a href="{:U('Home/Index/index')}">首ss页</a></li>
                     <li><a href="{:U('Home/Offices/index')}">找办公空间</a></li>
                     <li><a href="{:U('Home/Index/help')}">怎么帮助到您</a></li>
                     <li><a href="{:U('Home/Index/about')}">关于我们</a></li>
